--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1110,6 +1110,10 @@ input[type='checkbox'] {
   .home__img {
     width: 300px;
   }
+
+  .work__details {
+    opacity: 1;
+  }
 }
 
 /* For small devices */
